# learning-os

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 35ec2147b900_add_merge_queue_review_columns.py  4bc037ad74e0_initial_schema.py  a3af4c32ba8e_add_opportunity_execution_plan.py  eee2547dc3fa_add_opportunity_generation_columns.py
goals/: gaps.py  seed.py
ingestion/: notes.py  papers.py
opportunities/: feasibility.py  generate.py  planning.py  review.py
recommend/: dedup.py  filter.py  graph.py  render.py  search.py
resolution/: adjudicate.py  review.py
skills/: entry.py
storage/: db.py  models.py  vectors.py
tests/: conftest.py  test_feasibility.py  test_goals.py  test_ingestion.py  test_notes.py  test_opportunities.py  test_planning.py  test_recommend_dedup.py  test_recommend_filter.py  test_recommend_graph.py  test_recommend_render.py  test_recommend_search.py  test_resolution.py  test_review.py  test_skills.py  test_storage.py
