[project]
name = "learning-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "chromadb>=1.5.9",
    "docling>=2.113.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.9",
    "ollama>=0.6.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
